Fix footer to bottom of the page, even when there is no content. Change font size of brand logo to 1.8rem on small screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,11 +2,14 @@ body {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
-    min-width: 100%;
+/*    min-height: 100%;
+    min-width: 100%;*/
     position: relative;
     margin: 0px;
     padding: 0px;
+    padding:0;
+    margin:0;
+    height:100%;
 }
 
 html
@@ -35,6 +38,19 @@ html
     font-weight: 600;
 }
 
+#wrapper{
+    min-height:100%;
+    position:relative;
+}
+
+#footer {
+  position: absolute;
+  bottom:0;
+  left:0;
+  width:100%;
+  height:100px;
+}
+/*
 #footer {
    left:0px;
    right: 0px;
@@ -42,7 +58,7 @@ html
    position: static;
    flex-shrink: 0;
 }
-
+*/
 .search-card {
     border-radius: 25px;
 }
@@ -85,6 +101,10 @@ img {
     margin-right: 15px;
 }
 
+.category-title {
+    margin-top: 34.5px;
+    border-radius: 25px;
+}
 
 .card-image {
     max-height: 100vh;
@@ -237,7 +257,38 @@ h5 {
     margin-top: 0px;
     } 
 
-    */
+.my-recipes {   
+    background-image:url('../images/cake.jpg');
+    min-height: 100vh;
+    min-width: 100vw;
+    margin-bottom: 0px; 
+    margin-top: 0px;
+    padding-right: 15px;
+    position: relative;
+    } 
+
+.admin-section {   
+    background-image:url('../images/cake.jpg');
+    min-height: 100vh;
+    min-width: 100vw;
+    margin-bottom: 0px; 
+    margin-top: 0px;
+    padding-right: 15px;
+    position: relative;
+    } 
+
+.register {
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image:url('../images/cookies.jpg');
+    min-height: 95vh;
+    min-width: 100vw;
+    margin-bottom: 0px;
+    margin-top: 0px;
+   }
+
 .add-recipes-panel, .edit-recipes-panel {
     margin-top: 15%;
     margin-bottom: 15%;
@@ -279,11 +330,11 @@ h5 {
     padding-bottom: 20px;
     margin-bottom: 0px;
 }
-
+/*
 .manage-account-panel {
-    margin-top: 10%;
+   margin-top: 50%;
 }
-
+*/
 .reset-paragraph {
     margin-top: 20px;
 }
@@ -329,7 +380,7 @@ footer ul li {
 
 @media screen and (max-width: 600px) {
  nav .brand-logo {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
 
   h1 {
@@ -371,25 +422,5 @@ footer ul li {
 }
 
 @media screen and (min-width: 601px) {
-    .my-recipes, .admin_section {   
-    background-image:url('../images/wood.jpg');
-    min-height: 100vh;
-    min-width: 100vw;
-    margin-bottom: 0px; 
-    margin-top: 0px;
-    padding-right: 15px;
-    position: relative;
-    } 
-
-.register {
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image:url('../images/cookies.jpg');
-    min-height: 95vh;
-    min-width: 100vw;
-    margin-bottom: 0px;
-    margin-top: 0px;
-   }
+ 
 }
